--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Abdul Rehman"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "Abdul Rehman is an expert in Deep Learning, Computer Vision, and Anomaly Detection. With a strong foundation in cross-modal feature fusion and hypergraph-based modeling, he is adept at developing robust and scalable AI solutions. He has achieved high-accuracy results in industrial inspection, real-time monitoring, and medical image classification projects."
+  bio              : "A Human Being."
   location         : "Gujranwala, Pakistan"
   employer         :  "Gift University"
   pubmed           : 
